# libreofficekit

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cspell.json
src/: bindings.rs  error.rs  lib.rs  sys.rs  urls.rs  wrapper.cpp  wrapper.h  wrapper.hpp
tests/: convert.rs  instance.rs
tests/samples/: sample-docx-encrypted.docx  sample-docx-with-image.docx  sample-docx.docx  sample-text.txt  sample-xlsx-encrypted.xlsx  sample-xlsx.xlsx
