[package]
name = "libreofficekit"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jacobtread/libreofficekit"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "Wrapper around the LibreofficeKit (LOK) C++ library"

[dependencies]
num_enum = "0.7.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
url = "2.2.2"

[build-dependencies]
bindgen = "0.70"
