[package]
name = "libreofficekit"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jacobtread/libreofficekit"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "Wrapper around the LibreofficeKit (LOK) C++ library"

[dependencies]
# Enum constants
num_enum = "0.7"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# URL handling
url = "2.2.2"

[build-dependencies]
bindgen = "0.70"
