[package]
name = "libreofficekit"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jacobtread/libreofficekit"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "LibreOfficeKit implementation in Rust"

[dependencies]
# Bitsets
bitflags = "2"

# Enum constants
num_enum = "0.7"

# Library loading for LibreOffice library
dlopen2 = "0.7.0"

# Once cell for storing the loaded library
once_cell = "1.19.0"

# Locks for sharing safely
parking_lot = "0.12"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# URL handling
url = "2.2.2"
